Fixes crash happening on Android 6 because of resources not found
MAILAND-2922

--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -72,7 +72,7 @@
         android:layout_marginBottom="@dimen/margin_xxl"
         android:background="@drawable/ic_logo_background_shape"
         android:elevation="@dimen/elevation_s"
-        android:src="@drawable/ic_logo_mail"
+        app:srcCompat="@drawable/ic_logo_mail"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/drive_logo"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,7 +85,7 @@
         android:layout_marginBottom="@dimen/margin_xxl"
         android:background="@drawable/ic_logo_background_shape"
         android:elevation="@dimen/elevation_s"
-        android:src="@drawable/ic_logo_drive"
+        app:srcCompat="@drawable/ic_logo_drive"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/calendar_logo"
         app:layout_constraintStart_toEndOf="@id/mail_logo"
@@ -98,7 +98,7 @@
         android:layout_marginBottom="@dimen/margin_xxl"
         android:background="@drawable/ic_logo_background_shape"
         android:elevation="@dimen/elevation_s"
-        android:src="@drawable/ic_logo_calendar"
+        app:srcCompat="@drawable/ic_logo_calendar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/vpn_logo"
         app:layout_constraintStart_toEndOf="@id/drive_logo"
@@ -112,7 +112,7 @@
         android:layout_marginBottom="@dimen/margin_xxl"
         android:background="@drawable/ic_logo_background_shape"
         android:elevation="@dimen/elevation_s"
-        android:src="@drawable/ic_logo_vpn"
+        app:srcCompat="@drawable/ic_logo_vpn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/calendar_logo"
