--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -110,7 +110,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_m"
-        android:src="@drawable/ic_proton_user_plus"
+        app:srcCompat="@drawable/ic_proton_user_plus"
         app:backgroundTint="@color/interaction_strong"
         app:fabSize="mini"
         app:layout_constraintBottom_toBottomOf="@id/fab_contacts_add_menu"
@@ -126,7 +126,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_m"
-        android:src="@drawable/ic_proton_users_plus"
+        app:srcCompat="@drawable/ic_proton_users_plus"
         app:backgroundTint="@color/interaction_strong"
         app:fabSize="mini"
         app:layout_constraintBottom_toBottomOf="@id/fab_contacts_add_menu"
@@ -142,7 +142,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_proton_plus"
+        app:srcCompat="@drawable/ic_proton_plus"
         app:backgroundTint="@color/interaction_strong"
         app:fabSize="normal"
         app:layout_collapseMode="parallax"
