--- a/app/src/main/res/layout/content_contact_group_details.xml
+++ b/app/src/main/res/layout/content_contact_group_details.xml
@@ -62,7 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
                 android:layout_gravity="center"
-                android:src="@drawable/img_no_contacts"
+                app:srcCompat="@drawable/img_no_contacts"
                 app:layout_constraintBottom_toTopOf="@id/no_contacts"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
