--- a/app/src/main/res/layout/fragment_contacts_groups.xml
+++ b/app/src/main/res/layout/fragment_contacts_groups.xml
@@ -44,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="120dp"
             android:layout_gravity="center"
-            android:src="@drawable/img_no_groups"
+            app:srcCompat="@drawable/img_no_groups"
             app:layout_constraintBottom_toTopOf="@id/no_groups"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
