--- a/app/src/main/res/drawable/selector_unread_messages_status_text_color.xml
+++ b/app/src/main/res/drawable/selector_unread_messages_status_text_color.xml
@@ -22,7 +22,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:color="?attr/proton_interaction_norm"
+        android:color="?attr/proton_text_accent"
         android:state_checked="false" />
 
     <item
