Change of icon colors in ActionButtons for better readability in darkmode

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -140,7 +140,7 @@
         <item name="android:textAppearance">@style/Proton.Text.Default</item>
         <item name="android:maxLines">3</item>
         <item name="android:ellipsize">end</item>
-        <item name="drawableTint">?attr/brand_norm</item>
+        <item name="drawableTint">?attr/proton_text_accent</item>
     </style>
 
     <style name="ProtonMail.BottomSheetDialogTheme" parent="@style/ProtonBottomSheetDialog" />
