--- a/app/src/main/res/layout/contact_groups_email_list_item_selectable.xml
+++ b/app/src/main/res/layout/contact_groups_email_list_item_selectable.xml
@@ -86,7 +86,7 @@
         android:contentDescription="@string/close"
         android:gravity="center"
         android:padding="@dimen/padding_l"
-        android:src="@drawable/ic_proton_cross"
+        app:srcCompat="@drawable/ic_proton_cross"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
