--- a/app/src/main/res/layout/dialog_fragment_group_recipients.xml
+++ b/app/src/main/res/layout/dialog_fragment_group_recipients.xml
@@ -33,7 +33,7 @@
         android:layout_height="@dimen/size_icon_l"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:src="@drawable/ic_proton_users" />
+        app:srcCompat="@drawable/ic_proton_users" />
 
     <TextView
         android:id="@+id/dialog_group_recipients_group_name_text_view"
