--- a/app/src/main/res/layout/layout_message_details_header.xml
+++ b/app/src/main/res/layout/layout_message_details_header.xml
@@ -48,7 +48,7 @@
         android:layout_width="@dimen/message_details_header_small_icon_size"
         android:layout_height="@dimen/message_details_header_small_icon_size"
         android:layout_marginEnd="@dimen/message_details_header_margin_normal"
-        android:src="@drawable/ic_proton_arrow_up_and_left"
+        app:srcCompat="@drawable/ic_proton_arrow_up_and_left"
         app:layout_constraintBottom_toBottomOf="@id/senderNameTextView"
         app:layout_constraintLeft_toRightOf="@id/senderInitialBarrier"
         app:layout_constraintRight_toLeftOf="@id/repliedAllImageView"
@@ -61,7 +61,7 @@
         android:layout_width="@dimen/message_details_header_small_icon_size"
         android:layout_height="@dimen/message_details_header_small_icon_size"
         android:layout_marginEnd="@dimen/message_details_header_margin_normal"
-        android:src="@drawable/ic_proton_arrows_up_and_left"
+        app:srcCompat="@drawable/ic_proton_arrows_up_and_left"
         app:layout_constraintBottom_toBottomOf="@id/senderNameTextView"
         app:layout_constraintLeft_toRightOf="@id/repliedImageView"
         app:layout_constraintTop_toTopOf="@id/senderNameTextView"
@@ -73,7 +73,7 @@
         android:layout_width="@dimen/message_details_header_small_icon_size"
         android:layout_height="@dimen/message_details_header_small_icon_size"
         android:layout_marginEnd="@dimen/message_details_header_margin_normal"
-        android:src="@drawable/ic_proton_arrow_right"
+        app:srcCompat="@drawable/ic_proton_arrow_right"
         app:layout_constraintBottom_toBottomOf="@id/senderNameTextView"
         app:layout_constraintLeft_toRightOf="@id/repliedAllImageView"
         app:layout_constraintTop_toTopOf="@id/senderNameTextView"
@@ -169,7 +169,7 @@
         android:layout_width="@dimen/message_details_header_chevron_icon_size"
         android:layout_height="@dimen/message_details_header_chevron_icon_size"
         android:padding="@dimen/message_details_header_chevron_icon_padding"
-        android:src="@drawable/ic_proton_chevron_down"
+        app:srcCompat="@drawable/ic_proton_chevron_down"
         android:visibility="gone"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/timeDateTextView"
@@ -266,7 +266,7 @@
         android:id="@+id/labelsImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_proton_tag"
+        app:srcCompat="@drawable/ic_proton_tag"
         app:layout_constraintLeft_toLeftOf="@id/senderInitialView"
         app:layout_constraintRight_toRightOf="@id/senderInitialView"
         app:layout_constraintTop_toTopOf="@+id/labelsExpandedGroupView"
@@ -295,7 +295,7 @@
         android:id="@+id/calendarImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_proton_calendar_today"
+        app:srcCompat="@drawable/ic_proton_calendar_today"
         app:layout_constraintBottom_toBottomOf="@id/timeDateExtendedTextView"
         app:layout_constraintLeft_toLeftOf="@id/senderInitialView"
         app:layout_constraintRight_toRightOf="@id/senderInitialView"
@@ -339,7 +339,7 @@
         android:id="@+id/storageImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_proton_storage"
+        app:srcCompat="@drawable/ic_proton_storage"
         app:layout_constraintBottom_toBottomOf="@id/storageTextView"
         app:layout_constraintLeft_toLeftOf="@id/senderInitialView"
         app:layout_constraintRight_toRightOf="@id/senderInitialView"
