--- a/app/src/main/res/layout/layout_message_details_icons.xml
+++ b/app/src/main/res/layout/layout_message_details_icons.xml
@@ -30,7 +30,7 @@
         android:layout_width="@dimen/message_details_header_small_icon_size"
         android:layout_height="@dimen/message_details_header_small_icon_size"
         android:layout_marginEnd="@dimen/message_details_header_margin_small"
-        android:src="@drawable/ic_proton_paper_clip"
+        app:srcCompat="@drawable/ic_proton_paper_clip"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/starredToggleButton"
         app:layout_constraintTop_toTopOf="parent"
@@ -41,7 +41,7 @@
         android:layout_width="@dimen/mailbox_list_item_icon_size"
         android:layout_height="@dimen/mailbox_list_item_icon_size"
         android:contentDescription="@string/starred"
-        android:src="@drawable/ic_star_filled"
+        app:srcCompat="@drawable/ic_star_filled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
