--- a/app/src/main/res/layout/activity_compose_message.xml
+++ b/app/src/main/res/layout/activity_compose_message.xml
@@ -180,7 +180,7 @@
                 app:layout_constraintDimensionRatio="1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/composer_from_spinner"
-                android:src="@drawable/ic_proton_chevron_down"
+                app:srcCompat="@drawable/ic_proton_chevron_down"
                 app:tint="@color/shade_80"/>
 
             <View
