--- a/app/src/main/res/layout/activity_set_message_expiration.xml
+++ b/app/src/main/res/layout/activity_set_message_expiration.xml
@@ -57,7 +57,7 @@
         app:layout_constraintBottom_toBottomOf="@id/set_msg_expiration_none_text_view"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="@dimen/padding_l"
-        android:src="@drawable/ic_proton_checkmark"
+        app:srcCompat="@drawable/ic_proton_checkmark"
         app:tint="?proton_interaction_norm"
         android:contentDescription="@string/set_msg_expiration_check_description"
         android:visibility="gone"/>
@@ -84,7 +84,7 @@
         app:layout_constraintBottom_toBottomOf="@id/set_msg_expiration_1_hour_text_view"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="@dimen/padding_l"
-        android:src="@drawable/ic_proton_checkmark"
+        app:srcCompat="@drawable/ic_proton_checkmark"
         app:tint="?proton_interaction_norm"
         android:contentDescription="@string/set_msg_expiration_check_description"
         android:visibility="gone"/>
@@ -111,7 +111,7 @@
         app:layout_constraintBottom_toBottomOf="@id/set_msg_expiration_1_day_text_view"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="@dimen/padding_l"
-        android:src="@drawable/ic_proton_checkmark"
+        app:srcCompat="@drawable/ic_proton_checkmark"
         app:tint="?proton_interaction_norm"
         android:contentDescription="@string/set_msg_expiration_check_description"
         android:visibility="gone"/>
@@ -138,7 +138,7 @@
         app:layout_constraintBottom_toBottomOf="@id/set_msg_expiration_3_days_text_view"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="@dimen/padding_l"
-        android:src="@drawable/ic_proton_checkmark"
+        app:srcCompat="@drawable/ic_proton_checkmark"
         app:tint="?proton_interaction_norm"
         android:contentDescription="@string/set_msg_expiration_check_description"
         android:visibility="gone"/>
@@ -165,7 +165,7 @@
         app:layout_constraintBottom_toBottomOf="@id/set_msg_expiration_1_week_text_view"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="@dimen/padding_l"
-        android:src="@drawable/ic_proton_checkmark"
+        app:srcCompat="@drawable/ic_proton_checkmark"
         app:tint="?proton_interaction_norm"
         android:contentDescription="@string/set_msg_expiration_check_description"
         android:visibility="gone"/>
@@ -192,7 +192,7 @@
         app:layout_constraintBottom_toBottomOf="@id/set_msg_expiration_custom_text_view"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="@dimen/padding_l"
-        android:src="@drawable/ic_proton_checkmark"
+        app:srcCompat="@drawable/ic_proton_checkmark"
         app:tint="?proton_interaction_norm"
         android:contentDescription="@string/set_msg_expiration_check_description"
         android:visibility="gone"
