--- a/app/src/main/res/layout/fragment_pin.xml
+++ b/app/src/main/res/layout/fragment_pin.xml
@@ -42,7 +42,7 @@
         android:id="@+id/lock_icon"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_proton_lock"
+        app:srcCompat="@drawable/ic_proton_lock"
         app:layout_constraintBottom_toTopOf="@id/mPinEdit"
         app:layout_constraintTop_toTopOf="parent" />
 
