--- a/app/src/main/res/layout/layout_contacts_edit_filed_with_delete.xml
+++ b/app/src/main/res/layout/layout_contacts_edit_filed_with_delete.xml
@@ -44,7 +44,7 @@
         android:padding="@dimen/padding_m"
         android:layout_centerVertical="true"
         android:background="@android:color/transparent"
-        android:src="@drawable/ic_proton_cross_circle"
+        app:srcCompat="@drawable/ic_proton_cross_circle"
         android:layout_marginTop="@dimen/padding_s"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/option"
