--- a/app/src/main/res/layout/layout_sender_initial.xml
+++ b/app/src/main/res/layout/layout_sender_initial.xml
@@ -39,7 +39,7 @@
         android:layout_height="match_parent"
         android:background="@drawable/selector_selection_mode_background"
         android:padding="@dimen/sender_initial_view_check_icon_padding"
-        android:src="@drawable/selector_selection_mode_icon"
+        app:srcCompat="@drawable/selector_selection_mode_icon"
         android:visibility="invisible"
         app:tint="@color/icon_inverted" />
 
