--- a/app/src/main/res/layout/list_item_mailbox.xml
+++ b/app/src/main/res/layout/list_item_mailbox.xml
@@ -56,7 +56,7 @@
         app:layout_constraintEnd_toStartOf="@id/reply_all_image_view"
         app:layout_constraintTop_toTopOf="@id/reply_all_image_view"
         app:layout_constraintBottom_toBottomOf="@id/reply_all_image_view"
-        android:src="@drawable/ic_proton_arrow_up_and_left"
+        app:srcCompat="@drawable/ic_proton_arrow_up_and_left"
         android:contentDescription="@string/reply"
         app:tint="@color/icon_weak" />
 
@@ -69,7 +69,7 @@
         app:layout_constraintEnd_toStartOf="@id/forward_image_view"
         app:layout_constraintTop_toTopOf="@id/forward_image_view"
         app:layout_constraintBottom_toBottomOf="@id/forward_image_view"
-        android:src="@drawable/ic_proton_arrows_up_and_left"
+        app:srcCompat="@drawable/ic_proton_arrows_up_and_left"
         android:contentDescription="@string/reply_all"
         app:tint="@color/icon_weak" />
 
@@ -82,7 +82,7 @@
         app:layout_constraintEnd_toStartOf="@id/draft_image_view"
         app:layout_constraintTop_toTopOf="@id/draft_image_view"
         app:layout_constraintBottom_toBottomOf="@id/draft_image_view"
-        android:src="@drawable/ic_proton_arrow_right"
+        app:srcCompat="@drawable/ic_proton_arrow_right"
         android:contentDescription="@string/forward"
         app:tint="@color/icon_weak" />
 
@@ -95,7 +95,7 @@
         app:layout_constraintEnd_toStartOf="@id/correspondents_text_view"
         app:layout_constraintTop_toTopOf="@id/correspondents_text_view"
         app:layout_constraintBottom_toBottomOf="@id/correspondents_text_view"
-        android:src="@drawable/ic_proton_pen" />
+        app:srcCompat="@drawable/ic_proton_pen" />
 
     <TextView
         android:id="@+id/correspondents_text_view"
@@ -229,7 +229,7 @@
         app:layout_constraintEnd_toStartOf="@id/star_image_view"
         app:layout_constraintTop_toTopOf="@id/star_image_view"
         app:layout_constraintBottom_toBottomOf="@id/star_image_view"
-        android:src="@drawable/ic_proton_paper_clip"
+        app:srcCompat="@drawable/ic_proton_paper_clip"
         app:tint="@color/icon_weak" />
 
     <ImageView
@@ -239,7 +239,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/subject_text_view"
         app:layout_constraintBottom_toBottomOf="@id/subject_text_view"
-        android:src="@drawable/ic_star_filled"
+        app:srcCompat="@drawable/ic_star_filled"
         android:contentDescription="@string/starred"
         app:tint="@color/notification_warning" />
 
@@ -260,7 +260,7 @@
         android:layout_marginTop="@dimen/mailbox_list_item_views_margin"
         app:layout_constraintStart_toEndOf="@id/sender_initial_barrier"
         app:layout_constraintTop_toBottomOf="@id/subject_text_view"
-        android:src="@drawable/ic_proton_hourglass"
+        app:srcCompat="@drawable/ic_proton_hourglass"
         android:background="@drawable/circle_background_interaction_weak" />
 
     <ch.protonmail.android.ui.view.SingleLineLabelChipGroupView
