--- a/app/src/main/res/layout/settings_swipe_fragment.xml
+++ b/app/src/main/res/layout/settings_swipe_fragment.xml
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:padding="@dimen/padding_l"
-        android:src="@drawable/ic_proton_info_circle"
+        app:srcCompat="@drawable/ic_proton_info_circle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:tint="@color/icon_hint"
