--- a/app/src/main/res/raw/css_reset_with_custom_props.css
+++ b/app/src/main/res/raw/css_reset_with_custom_props.css
@@ -219,6 +219,7 @@ body {
     Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   padding: 1rem;
   line-height: 1.5;
+  overflow-wrap: break-word;
   background: var(--background-norm);
   color: var(--text-norm);
 }
