Fixes rendering of emails with a <table> tag
Restarts the `table-layout` property of the <table> tag in every html
email to align with web and to render some emails better

MAILAND-2949

--- a/app/src/main/res/raw/css_reset_with_custom_props.css
+++ b/app/src/main/res/raw/css_reset_with_custom_props.css
@@ -29,16 +29,6 @@ output {
   display: inline;
 }
 
-html {
-  box-sizing: border-box;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
 html,
 body,
 blockquote,
@@ -86,7 +76,7 @@ iframe {
 ul,
 ol,
 menu {
-  padding-left: 2em;
+  padding-inline-start:2em;
 }
 
 dd {
