--- a/app/src/main/res/layout/layout_message_details_icons.xml
+++ b/app/src/main/res/layout/layout_message_details_icons.xml
@@ -45,6 +45,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/sunglow" />
+        app:tint="@color/notification_warning" />
 
 </merge>
