Fixes a bug where we were sending content from subject field as body Fixes a accent text color

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,7 +26,7 @@
     </style>
 
     <style name="Proton.Text.DefaultSmall.Interaction">
-        <item name="android:textColor">?attr/proton_interaction_norm</item>
+        <item name="android:textColor">?attr/proton_text_accent</item>
     </style>
 
     <style name="Proton.Text.Caption.Strong.Inverted">
