--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,8 +27,9 @@
     <dimen name="size_icon_s">16dp</dimen>
     <dimen name="size_icon_m">24dp</dimen>
     <dimen name="size_icon_l">32dp</dimen>
+    <dimen name="size_corner_xxxs">4dp</dimen>
+    <dimen name="size_corner_xxs">6dp</dimen>
     <dimen name="size_corner_xs">8dp</dimen>
-    <dimen name="size_corner_xxs">4dp</dimen>
     <dimen name="size_badge">24dp</dimen>
     <dimen name="size_corner_s">16dp</dimen>
 
