--- a/app/src/main/res/drawable/shape_rectangle_xxsmall_corners_weak_fill.xml
+++ b/app/src/main/res/drawable/shape_rectangle_xxsmall_corners_weak_fill.xml
@@ -19,5 +19,5 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/interaction_weak"/>
-    <corners android:radius="@dimen/size_corner_xxs" />
+    <corners android:radius="@dimen/size_corner_xxxs" />
 </shape>
