--- a/app/src/main/res/layout/list_item_mailbox.xml
+++ b/app/src/main/res/layout/list_item_mailbox.xml
@@ -130,6 +130,7 @@
             android:textAppearance="@style/Proton.Text.Overline"
             android:textColor="?attr/proton_text_accent"
             android:visibility="gone"
+            app:chipCornerRadius="@dimen/size_corner_xxs"
             app:chipMinTouchTargetSize="0dp"
             app:layout_constraintBottom_toBottomOf="@id/correspondents_text_view"
             app:layout_constraintStart_toEndOf="@id/correspondents_text_view"
